--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -19,10 +19,20 @@
   }
 }
 
+html,
+body {
+  height: 100%;
+  overflow: hidden;
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+#__next {
+  height: 100%;
 }
 
 button {
